Loading and saving of xyzrgb pcd files working.

--- a/icon.qrc
+++ b/icon.qrc
@@ -1,1 +1,6 @@
-<RCC/>
+<RCC>
+    <qresource prefix="/icon">
+        <file>icon.png</file>
+        <file>icon32.png</file>
+    </qresource>
+</RCC>
