--- a/pclobjectextractor.ui
+++ b/pclobjectextractor.ui
@@ -223,15 +223,21 @@
     <property name="title">
      <string>File</string>
     </property>
-    <addaction name="actionHelp"/>
     <addaction name="actionExit"/>
    </widget>
+   <widget class="QMenu" name="menuHelp">
+    <property name="title">
+     <string>Help</string>
+    </property>
+    <addaction name="actionHelp"/>
+   </widget>
    <addaction name="menuFile"/>
+   <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionHelp">
    <property name="text">
-    <string>Help</string>
+    <string>About PCL Object Extractor</string>
    </property>
   </action>
   <action name="actionExit">
