Added in parsing of point cloud type.

--- a/pclobjectextractor.ui
+++ b/pclobjectextractor.ui
@@ -182,7 +182,7 @@
                <item>
                 <widget class="QPushButton" name="saveButton">
                  <property name="sizePolicy">
-                  <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
+                  <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                    <horstretch>0</horstretch>
                    <verstretch>0</verstretch>
                   </sizepolicy>
